# bootcamp-diamonds-correlation

./: main.py  pyproject.toml
Data/: diamonds-description.md
config/mpl/: fontlist-v330.json
